src/testData/analysis/globalFunctionPointers.cr
->::foo

->::Foo::Bar.foo

-><error descr="ProcPointer of local variable cannot be global">::</error>foo.foo

-><error descr="ProcPointer of instance variable cannot be global">::</error>@foo.foo

-><error descr="ProcPointer of class variable cannot be global">::</error>@@foo.foo